<resources>
    <string name="common_android_wear_notification_needs_update_text">An application requires an update to the Android Wear app.</string>
    <string name="common_android_wear_update_text">"This app won't run unless you update the Android Wear app."</string>
    <string name="common_android_wear_update_title">Update Android Wear</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">"This app won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_error_notification_requested_by_msg">Requested by %1$s</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">"This app won't run without Google Play services, which are missing from your phone."</string>
    <string name="common_google_play_services_install_text_tablet">"This app won't run without Google Play services, which are missing from your tablet."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_needs_enabling_title">An application requires Google Play services to be enabled.</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_needs_installation_title">An application requires installation of Google Play services.</string>
    <string name="common_google_play_services_notification_needs_update_title">An application requires an update for Google Play services.</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">Unknown issue with Google Play services.</string>
    <string name="common_google_play_services_unsupported_text">Google Play services, which some of your applications rely on, is not supported by your device. Please contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"This app won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="activity_game_time_tv_score">Time:</string>
    <string name="activity_game_tv_examples">Ex: %s</string>
    <string name="activity_game_tv_level">Level: %s</string>
    <string name="activity_game_tv_score">Score:</string>
    <string name="activity_game_tv_solution">Solution:</string>
    <string name="activity_main_b_Exit">Exit</string>
    <string name="activity_main_b_Rate">Please rate!</string>
    <string name="activity_main_b_Settings">Settings</string>
    <string name="activity_main_b_Start">Single game</string>
    <string name="activity_main_b_Teamwise">Joint game</string>
    <string name="activity_main_b_Training">Training mode</string>
    <string name="activity_main_b_by_heart">By heart</string>
    <string name="activity_main_b_one_player">One player</string>
    <string name="activity_main_b_support">Email support</string>
    <string name="activity_main_b_two_players">Two players</string>
    <string name="activity_main_tv_days_streak">&lt;i>&lt;b>%s&lt;/b> &lt;small>&lt;small>day(s) streak&lt;/small>&lt;/small>&lt;/i></string>
    <string name="activity_main_tv_ex_per_day_today">&lt;i>&lt;b>%s&lt;/b> &lt;small>&lt;small>today&lt;/small>&lt;/small>&lt;/i></string>
    <string name="activity_main_tv_ex_per_day_total_solved">&lt;i>&lt;b>%s&lt;/b> &lt;small>&lt;small>total&lt;/small>&lt;/small>&lt;/i></string>
    <string name="ad_rate_b_later">Later</string>
    <string name="ad_rate_tv_rate">Thank you for using my app, it would mean a lot to us if you took a minute to give us 5 stars in the google play.</string>
    <string name="alert_dialog_game_b_minute">Minute challenge</string>
    <string name="alert_dialog_game_b_not_time">No time limit</string>
    <string name="alert_dialog_game_b_single">To the bitter end</string>
    <string name="alert_dialog_game_b_time">Speed challenge</string>
    <string name="alert_dialog_game_tv_select_game">Select game</string>
    <string name="alert_dialog_level_complete_b_cancel">↩</string>
    <string name="alert_dialog_level_complete_b_next">→</string>
    <string name="alert_dialog_level_complete_b_repeat">⟳</string>
    <string name="alert_dialog_level_complete_tv_score">"Score: "</string>
    <string name="alert_dialog_numpad_b_select">Select</string>
    <string name="alert_dialog_player_score">You scored:</string>
    <string name="alert_dialog_player_score_total">Total score:</string>
    <string name="alert_dialog_player_tv_lose">You lose!</string>
    <string name="alert_dialog_player_tv_win">You win!</string>
    <string name="alert_dialog_rule_b_cancel">↩</string>
    <string name="alert_dialog_rule_b_ok">→</string>
    <string name="alert_dialog_rule_b_translate">Translate</string>
    <string name="alert_dialog_timer_end_b_cancel">↩</string>
    <string name="alert_dialog_timer_end_b_repeat">⟳</string>
    <string name="alert_dialog_timer_end_tv_score">"Score: "</string>
    <string name="alert_dialog_timer_end_tv_score_max">"High score: "</string>
    <string name="alert_dialog_timer_end_tv_solution">"Solution: "</string>
    <string name="alert_dialog_timer_end_tv_time_max">"Best result: "</string>
    <string name="app_name">Math Tricks</string>
    <string name="b_rtm">Multiplayer</string>
    <string name="group_addition_name">Addition</string>
    <string name="group_division_name">Division</string>
    <string name="group_multiplication_name">Multiplication</string>
    <string name="group_percent_name">Percentage</string>
    <string name="group_power_name">Exponentiation</string>
    <string name="group_root_name">nth root</string>
    <string name="group_square_name">Squaring</string>
    <string name="group_subtraction_name">Subtraction</string>
    <string name="invite_players">Invite friends</string>
    <string name="option_alarm">Notification</string>
    <string name="option_language">Language</string>
    <string name="option_music">Music</string>
    <string name="option_numpad">Numpad</string>
    <string name="option_share">Share</string>
    <string name="option_sound">Sound</string>
    <string name="option_theme">Theme</string>
    <string name="option_vibration">Vibration</string>
    <string name="player_alert_dialog_tv_steps_name">"Math problems
(steps to win)!"</string>
    <string name="quick_game">Quick game</string>
    <string name="see_invitations">See invitations</string>
    <string name="trick_05_percent_rule_text">&lt;b>&lt;u>-1-&lt;/u>&lt;/b> &lt;br> &lt;br>&lt;b>&lt;font color=#c27171>0.5&lt;/font>% → &lt;font color=#7875fd>600&lt;/font> = 3&lt;/b> &lt;br> &lt;br>&lt;font color=#666666>&lt;b>Step 1&lt;/b>&lt;/font> - Divide the number by 100: &lt;br>&lt;b>&lt;font color=#7875fd>600&lt;/font> / 100 = &lt;font color=#008800>6&lt;/font>&lt;/b> &lt;br> &lt;br>&lt;font color=#666666>&lt;b>Step 2&lt;/b>&lt;/font> - Divide the number from &lt;font color=#666666>&lt;b>Step 1&lt;/b>&lt;/font> by 2: &lt;br>&lt;b>&lt;font color=#008800>6&lt;/font> / 2 = 3</string>
    <string name="trick_05_percent_text">0.5%</string>
    <string name="trick_150_percent_rule_text" formatted="false">&lt;b>&lt;u>-1-&lt;/u>&lt;/b> &lt;br> &lt;br>&lt;b>&lt;font color=#c27171>150&lt;/font>% → &lt;font color=#888800>60&lt;/font> = 90&lt;/b> &lt;br>&lt;b>&lt;font color=#c27171>150&lt;/font>% = &lt;font color=#7875fd>100&lt;/font>% + &lt;font color=#008800>50&lt;/font>%&lt;/b> &lt;br> &lt;br>&lt;font color=#666666>&lt;b>Step 1&lt;/b>&lt;/font> - &lt;b>&lt;font color=#7875fd>100&lt;/font>% → &lt;font color=#888800>60&lt;/font> = &lt;font color=#924bd7>60&lt;/font>&lt;/b> &lt;br> &lt;br>&lt;font color=#666666>&lt;b>Step 2&lt;/b>&lt;/font> - &lt;b>&lt;font color=#008800>50&lt;/font>% = &lt;font color=#7875fd>100&lt;/font>% / &lt;font color=#aa7700>2&lt;/font>&lt;/b> &lt;br> Divide the number by 2: &lt;br>&lt;b>&lt;font color=#924bd7>60&lt;/font> / &lt;font color=#aa7700>2&lt;/font> = &lt;font color=#008888>30&lt;/font>&lt;/b> &lt;br> &lt;br>&lt;font color=#666666>&lt;b>Step 3&lt;/b>&lt;/font> - Add &lt;font color=#666666>&lt;b>Step 1&lt;/b>&lt;/font> and &lt;font color=#666666>&lt;b>Step 2&lt;/b>&lt;/font>: &lt;br>&lt;b>&lt;font color=#924bd7>60&lt;/font> + &lt;font color=#008888>30&lt;/font> = 90&lt;/b></string>
    <string name="trick_150_percent_text">150%</string>
    <string name="trick_15_percent_rule_text">&lt;b>&lt;u>-1-&lt;/u>&lt;/b> &lt;br> &lt;br>&lt;b>&lt;font color=#c27171>15&lt;/font>% → &lt;font color=#7875fd>60&lt;/font> = 9&lt;/b> &lt;br> &lt;br>&lt;font color=#666666>&lt;b>Step 1&lt;/b>&lt;/font> - Divide the number by 10: &lt;br>&lt;b>&lt;font color=#7875fd>60&lt;/font> / 10 = &lt;font color=#008800>6&lt;/font>&lt;/b> &lt;br> &lt;br>&lt;font color=#666666>&lt;b>Step 2&lt;/b>&lt;/font> - Divide the number from &lt;font color=#666666>&lt;b>Step 1&lt;/b>&lt;/font> by 2: &lt;br>&lt;b>&lt;font color=#008800>6&lt;/font> / 2 = &lt;font color=#888800>3&lt;/font>&lt;/b> &lt;br> &lt;br>&lt;font color=#666666>&lt;b>Step 3&lt;/b>&lt;/font> - Add &lt;font color=#666666>&lt;b>Step 1&lt;/b>&lt;/font> and &lt;font color=#666666>&lt;b>Step 2&lt;/b>&lt;/font>: &lt;br>&lt;b>&lt;font color=#008800>6&lt;/font> + &lt;font color=#888800>3&lt;/font> = 9&lt;/b></string>
    <string name="trick_15_percent_text">15%</string>
    <string name="trick_200_percent_rule_text" formatted="false">&lt;b>&lt;u>-1-&lt;/u>&lt;/b> &lt;br> &lt;br>&lt;b>&lt;font color=#c27171>200&lt;/font>% → &lt;font color=#7875fd>64&lt;/font> = 128&lt;/b> &lt;br> &lt;br>&lt;font color=#666666>&lt;b>Step 1&lt;/b>&lt;/font> - &lt;b>&lt;font color=#c27171>200&lt;/font>% = 100% × &lt;font color=#008800>2&lt;/font>&lt;/b> &lt;br> &lt;br>&lt;font color=#666666>&lt;b>Step 2&lt;/b>&lt;/font> - Multiply the number by 2: &lt;br>&lt;b>&lt;font color=#7875fd>64&lt;/font> × &lt;font color=#008800>2&lt;/font> = 128&lt;/b></string>
    <string name="trick_200_percent_text">200%</string>
    <string name="trick_tv_new">new</string>
    <string name="alert_dialog_rule_iv_content_description">Rule</string>
    <string name="activity_game_b_one">1</string>
    <string name="activity_trick_tv_trick_text">Text</string>
    <string name="admob_unit_id_activity_by_heart">ca-app-pub-4469463872184379/9114430449</string>
    <string name="admob_unit_id_activity_game_type">ca-app-pub-4469463872184379/6284520843</string>
    <string name="admob_unit_id_activity_game_type_training">ca-app-pub-4469463872184379/4668186849</string>
    <string name="admob_unit_id_activity_hint">ca-app-pub-4469463872184379/7378168441</string>
    <string name="admob_unit_id_activity_language">ca-app-pub-4469463872184379/7967050449</string>
    <string name="alert_dialog_level_complete_iv_content_description">Stars</string>
</resources>