<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/linearLayoutAlertDialogGame" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" style="?theme_activity_game_ll_head_shadow">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?theme_activity_game_ll_head">
            <ImageButton android:id="@id/b_back" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?theme_ib_arrow_back_activity" />
            <TextView android:id="@id/tv_level" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activity_game_tv_level" android:layout_toRightOf="@id/ibUp" android:layout_centerVertical="true" android:layout_toEndOf="@id/ibUp" style="?theme_activity_game_tv_score" />
            <TextView android:id="@id/textView1" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/a_main_ll_b_margins" android:text="@string/alert_dialog_game_tv_select_game" style="?theme_activity_game_tv_level" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?theme_activity_game_ll_expression">
        <RelativeLayout android:layout_gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageButton android:id="@id/ibUp" android:layout_width="60.0dip" android:layout_height="60.0dip" android:scaleType="center" android:layout_alignParentTop="true" android:layout_centerHorizontal="true" android:contentDescription="@string/alert_dialog_rule_iv_content_description" style="?theme_b_arrow_up" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="134.0dip" android:layout_height="wrap_content">
            <EditText android:textSize="@dimen/theme_activity_tricks_tv_trick" android:gravity="center" android:id="@id/etNumber" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:text="0" android:ems="10" android:inputType="number" style="?theme_et" />
        </LinearLayout>
        <ImageButton android:id="@id/ibDown" android:layout_width="60.0dip" android:layout_height="60.0dip" android:scaleType="center" android:contentDescription="@string/alert_dialog_rule_iv_content_description" style="?theme_b_arrow_down" />
    </LinearLayout>
    <ScrollView android:id="@id/scrollView6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fillViewport="true" android:layout_weight="1.0">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/button_alert_dialog_game_single" android:layout_width="@dimen/alert_dialog_theme_b_width" android:layout_height="wrap_content" android:text="@string/alert_dialog_game_b_single" style="?theme_b_to_the_bitter_end" />
            <Button android:id="@id/button_alert_dialog_game_minute" android:layout_width="@dimen/alert_dialog_theme_b_width" android:layout_height="wrap_content" android:text="@string/alert_dialog_game_b_minute" style="?theme_b_minute_challenge" />
            <Button android:id="@id/button_alert_dialog_game_time" android:layout_width="@dimen/alert_dialog_theme_b_width" android:layout_height="wrap_content" android:text="@string/alert_dialog_game_b_time" style="?theme_b_speed_challenge" />
            <Button android:id="@id/button_alert_dialog_game_not_time" android:layout_width="@dimen/alert_dialog_theme_b_width" android:layout_height="wrap_content" android:text="@string/alert_dialog_game_b_not_time" style="?theme_b_non_time" />
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" ads:adSize="SMART_BANNER" ads:adUnitId="@string/admob_unit_id_activity_game_type_training" />
</LinearLayout>