<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center|left" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/LinearLayout1" android:background="@android:color/transparent" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageButton android:id="@id/ib_music_delete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/alert_dialog_level_complete_iv_content_description" style="?theme_activity_music_b_delete" />
    <RelativeLayout android:background="@android:color/transparent" android:paddingTop="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <CheckBox android:id="@id/cbTrick" android:focusable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:layout_centerVertical="true" style="?theme_activity_tricks_cb_all" />
        <TextView android:textStyle="bold|italic" android:id="@id/tvTrickPosition" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/activity_game_b_one" android:layout_alignParentLeft="true" android:layout_centerVertical="true" style="?theme_activity_tricks_tv_trick" />
        <TextView android:ellipsize="marquee" android:id="@id/tvTrickText" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/activity_trick_tv_trick_text" android:singleLine="true" android:layout_toLeftOf="@id/cbTrick" android:layout_toRightOf="@id/tvTrickPosition" android:layout_centerVertical="true" android:marqueeRepeatLimit="marquee_forever" style="?theme_activity_tricks_tv_trick" />
        <TextView android:ellipsize="marquee" android:id="@id/tvTrickNew" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="5.0dip" android:text="@string/trick_tv_new" android:singleLine="true" android:layout_below="@id/tvTrickText" android:layout_alignLeft="@id/tvTrickPosition" android:marqueeRepeatLimit="marquee_forever" style="?theme_activity_tricks_tv_trick" />
    </RelativeLayout>
</LinearLayout>