<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" style="?attr/theme_activity_game_ll_head_shadow">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?theme_activity_game_ll_head">
            <LinearLayout android:gravity="center|left" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_weight="1.0">
                <ImageButton android:id="@id/b_back" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?theme_ib_arrow_back_activity" />
                <TextView android:gravity="center" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/activity_main_b_by_heart" style="?theme_activity_game_tv_level" />
            </LinearLayout>
            <LinearLayout android:gravity="fill_vertical|center|right" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/cb_paddingRight">
                <ImageButton android:id="@id/ib_lb" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/alert_dialog_level_complete_iv_content_description" style="?th_ib_leaderboard_head" />
                <TextView android:id="@id/tv_score" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0/2058" style="?theme_activity_game_tv_trick_name" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <ListView android:scrollbarStyle="outsideOverlay" android:id="@id/listViewByHeart" android:focusable="false" android:longClickable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/alert_dialog_rule_iv_content_description" style="?theme_activity_tricks_lv_tricks" />
    </LinearLayout>
    <com.google.android.gms.ads.AdView android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" ads:adSize="SMART_BANNER" ads:adUnitId="@string/admob_unit_id_activity_by_heart" />
</LinearLayout>