<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/lladSolutionText" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ads="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:gravity="center|right" android:orientation="horizontal" android:id="@id/linearLayout4" android:layout_width="fill_parent" style="?attr/theme_activity_game_ll_head_shadow">
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0" style="?attr/theme_activity_game_ll_head">
            <ImageButton android:id="@id/b_ad_solution_text" android:layout_width="wrap_content" android:layout_height="wrap_content" style="?theme_ib_arrow_back_activity" />
            <ScrollView android:id="@id/sv_head" android:layout_width="fill_parent" android:layout_height="fill_parent" android:fillViewport="true" android:layout_weight="1.0" android:requiresFadingEdge="vertical">
                <LinearLayout android:gravity="center|left" android:orientation="horizontal" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
                    <TextView android:id="@id/tv_trick_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Trick_name" style="?theme_activity_game_tv_trick_name" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
    <ScrollView android:id="@id/sv_solution_text" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:gravity="left" android:orientation="horizontal" android:id="@id/ll_st" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?theme_activity_game_ll_expression">
                <TextView android:id="@id/tv_ad_solution_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/alert_dialog_timer_end_tv_score_max" style="?theme_alert_dialog_timer_end_tv_score_max" />
            </LinearLayout>
            <ImageView android:layout_gravity="center_horizontal" android:id="@id/iv_more" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_th_light_b_more" />
            <LinearLayout android:orientation="vertical" android:id="@id/ll_st_rule" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?theme_activity_game_ll_expression">
                <TextView android:id="@id/tv_rule" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/activity_trick_tv_trick_text" style="?theme_activity_tricks_tv_trick" />
                <ImageView android:layout_gravity="center|top" android:id="@id/iv_rule" android:layout_width="wrap_content" android:layout_height="0.0dip" android:scaleType="fitStart" android:layout_weight="1.0" android:contentDescription="@string/alert_dialog_rule_iv_content_description" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <com.google.android.gms.ads.AdView android:id="@id/adView" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/ads_padding_top" ads:adSize="SMART_BANNER" ads:adUnitId="@string/admob_unit_id_activity_hint" />
</LinearLayout>